2005-03-08  Stipe Tolj  <stolj@wapme.de> 
    * wap/wtp_resp.h: adding patch from Igor to support larger objects
      via WTP SAR segments. Thanks to Igor for providing the patch and
      production environment tests and Mindaugas Riauba <mind@bi.lt> for
      picking this item up again for discussion.
      [Msg-ID: <8BCBF9DB739F034B87FE7C7D30EAE55C01A0F34B@hqex2k.francoudi.com>]

2005-03-07  Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: (Client Part) fixed race condition while destroing
      Connection. In order to not trigger RC we must first explicit
      unregister connection from FDSet (because this operation is locked)
      and then destroy Connection.
      (Server Part) fixed race condition that caused double free of a
      HTTPClient struct while closing specified listen port.

2005-03-07  Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_pgsql.c: attached patch adds again 'LIMIT 1' to dlr_pgsql
      because after fix for #190 we will delete and update to much rows
      in postgresql.
      [Msg-Id: <cv04cu$dv3$1@sea.gmane.org>]

2005-03-07  Alexander Malysh <amalysh at kannel.org>
    * gw/wap-appl.c: added call to 'radius_acct_get_msisdn' back.
      Thanks to Jonathan for reporting this.

2005-03-07 Aarno Syvanen <as@gni.ch>
    * doc/userguide/userguide.xml:File schemes in settings and bookmark
      examples were wrong. Fixed this. Thanks to Davy for reporting.

2005-03-06  Alexander Malysh <amalysh at kannel.org>
    * gw/bb_store.c, gw/wap-appl.c: fixed compiler warnings.

2005-03-06  Alexander Malysh <amalysh at kannel.org>
    * gw/wap-appl.c: Fix empty device_headers with request_headers == NULL
      and session_headers != NULL and small memory leak with connection-oriented wap
      Thanks to "Paul P Komkoff Jr <i at stingr.net>" for the patch.
      [Msg-Id: <20050306212423.GA26532@stingr.stingr.net>]

2005-03-04  Stipe Tolj  <stolj@wapme.de> 